# CrypticCinema

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.md.save  firebase.json  omdb_fetcher.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tmdb_fetcher.py
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: __init__.py  auth.py  collections.py  health.py  me.py  titles.py
app/core/: config.py  security.py
app/db/: models.py  session.py
app/schemas/: __init__.py  auth.py  collections.py  titles.py  user_library.py
app/utils/: __init__.py  slugs.py
docs/: blueprint.md  google-launch-playbook.md
functions/: index.ts  package.json  tsconfig.json
public/: ads.txt  manifest.webmanifest  robots.txt  sitemap.xml
scripts/: validate-dataset.mjs
src/ai/: dev.ts
src/ai/flows/: generate-cryptic-clue.ts
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/app/about/: page.tsx
src/app/contact/: page.tsx
src/app/og/: route.tsx
src/app/privacy/: page.tsx
src/components/ads/: AdConsentBanner.tsx  AdConsentProvider.tsx  AdSenseScript.tsx  AdSlot.tsx
src/components/contact/: ContactClientForm.tsx
src/components/game/: CrypticCinemaGame.tsx
src/components/layout/: Header.tsx
src/components/seo/: JsonLdScript.tsx
src/data/: omdb_movies.json  tmdb_movies.json
src/lib/: movies.ts  site.ts
tests/: conftest.py  test_auth.py  test_collections.py  test_health.py  test_me_title_states.py  test_titles.py
